# zeroclaw

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.debian  Dockerfile.debian.ci  Justfile  README.ar.md  README.bn.md  README.cs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.fi.md  README.fr.md  README.he.md  README.hi.md  README.hu.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nb.md  README.nl.md  README.pl.md  README.pt.md  README.ro.md  README.ru.md  README.sv.md  README.th.md  README.tl.md  README.tr.md  README.uk.md  README.ur.md  README.vi.md  (+7 more)
.cargo/: audit.toml
.github/: pull_request_template.md
.github/workflows/: ci-run.yml  pre-release-validate.yml  pub-aur.yml  pub-homebrew-core.yml  pub-scoop.yml  publish-crates-auto.yml  publish-crates.yml  tweet-release.yml
crates/zeroclaw-channels/: Cargo.toml
crates/zeroclaw-channels/src/: lib.rs  matrix.rs  signal.rs  slack.rs  telegram.rs
crates/zeroclaw-channels/src/orchestrator/: acp_server.rs  matrix.rs  media_pipeline.rs  mod.rs  mqtt.rs  telegram.rs
crates/zeroclaw-config/: Cargo.toml
crates/zeroclaw-config/src/: lib.rs  migration.rs  policy.rs  providers.rs  schema.rs
crates/zeroclaw-runtime/: Cargo.toml
crates/zeroclaw-runtime/src/: cli_channel_impl.rs  lib.rs
crates/zeroclaw-runtime/src/agent/: agent.rs  history.rs  history_pruner.rs  loop_.rs
crates/zeroclaw-runtime/src/cron/: scheduler.rs
crates/zeroclaw-runtime/src/daemon/: mod.rs
crates/zeroclaw-runtime/src/doctor/: mod.rs
crates/zeroclaw-runtime/src/integrations/: registry.rs
crates/zeroclaw-runtime/src/onboard/: wizard.rs
crates/zeroclaw-runtime/src/security/: detect.rs  docker.rs  mod.rs
crates/zeroclaw-runtime/src/tools/: mod.rs
crates/zeroclaw-tools/: Cargo.toml
crates/zeroclaw-tools/src/: model_routing_config.rs
dev/: test-tui-onboarding.sh
docs/: openai-temperature-compatibility.md  pr-workflow.md
docs/contributing/: ci-map.md  release-process.md
docs/hardware/: arduino-uno-q-setup.md
docs/i18n/: README.md
docs/maintainers/: mass-close-audit-2026-04-12.md
docs/ops/: operations-runbook.md  troubleshooting.md
docs/security/: matrix-e2ee-guide.md
docs/setup-guides/: one-click-bootstrap.md
docs/vi/: one-click-bootstrap.md  troubleshooting.md
example-plugin/: Cargo.toml  manifest.toml
example-plugin/src/: lib.rs
examples/: config.example.toml
scripts/ci/: check_no_linear_product_refs.sh
skills/1password/: SKILL.md
skills/accelerate/: SKILL.md
skills/agentmail/: SKILL.md
skills/apple-notes/: SKILL.md
skills/apple-reminders/: SKILL.md
skills/arxiv/: SKILL.md
skills/ascii-art/: SKILL.md
skills/ascii-video/: README.md  SKILL.md
skills/audiocraft/: SKILL.md
skills/axolotl/: SKILL.md
skills/bear-notes/: SKILL.md
skills/blackbox/: SKILL.md
skills/blogwatcher/: SKILL.md
skills/blucli/: SKILL.md
skills/bluebubbles/: SKILL.md
skills/camsnap/: SKILL.md
skills/canvas/: SKILL.md
skills/chroma/: SKILL.md
skills/claude-code/: SKILL.md
skills/clawhub/: SKILL.md
skills/clip/: SKILL.md
skills/code-review/: SKILL.md
skills/codebase-inspection/: SKILL.md
skills/codex/: SKILL.md
skills/coding-agent/: SKILL.md
skills/discord/: SKILL.md
skills/dogfood/: SKILL.md
skills/domain-intel/: SKILL.md
skills/dspy/: SKILL.md
skills/duckduckgo-search/: SKILL.md
skills/eightctl/: SKILL.md
skills/excalidraw/: SKILL.md
skills/faiss/: SKILL.md
skills/find-nearby/: SKILL.md
skills/findmy/: SKILL.md
skills/flash-attention/: SKILL.md
skills/gemini/: SKILL.md
skills/gguf/: SKILL.md
skills/gh-issues/: SKILL.md
skills/gif-search/: SKILL.md
skills/gifgrep/: SKILL.md
skills/github/: SKILL.md
skills/github-auth/: SKILL.md
skills/github-code-review/: SKILL.md
skills/github-issues/: SKILL.md
skills/github-pr-workflow/: SKILL.md
skills/github-repo-management/: SKILL.md
skills/gog/: SKILL.md
skills/google-workspace/: SKILL.md
skills/goplaces/: SKILL.md
skills/grpo-rl-training/: SKILL.md
skills/guidance/: SKILL.md
skills/healthcheck/: SKILL.md
skills/heartmula/: SKILL.md
skills/hermes-agent/: SKILL.md
skills/hermes-atropos-environments/: SKILL.md
skills/himalaya/: SKILL.md
skills/huggingface-tokenizers/: SKILL.md
skills/imessage/: SKILL.md
skills/imsg/: SKILL.md
skills/instructor/: SKILL.md
skills/jupyter-live-kernel/: SKILL.md
skills/lambda-labs/: SKILL.md
skills/linear/: SKILL.md
skills/llama-cpp/: SKILL.md
skills/llava/: SKILL.md
skills/lm-evaluation-harness/: SKILL.md
skills/mcporter/: SKILL.md
skills/minecraft-modpack-server/: SKILL.md
skills/ml-paper-writing/: SKILL.md
skills/modal/: SKILL.md
skills/model-usage/: SKILL.md
skills/nano-banana-pro/: SKILL.md
skills/nano-pdf/: SKILL.md
skills/native-mcp/: SKILL.md
skills/nemo-curator/: SKILL.md
skills/neuroskill-bci/: SKILL.md
skills/notion/: SKILL.md
skills/obliteratus/: SKILL.md
skills/obsidian/: SKILL.md
skills/ocr-and-documents/: SKILL.md
skills/openai-image-gen/: SKILL.md
skills/openai-whisper/: SKILL.md
skills/openai-whisper-api/: SKILL.md
skills/openclaw-migration/: SKILL.md
skills/opencode/: SKILL.md
skills/openhue/: SKILL.md
skills/oracle/: SKILL.md
skills/ordercli/: SKILL.md
skills/outlines/: SKILL.md
skills/parallel-cli/: SKILL.md
skills/peekaboo/: SKILL.md
skills/peft/: SKILL.md
skills/pinecone/: SKILL.md
skills/plan/: SKILL.md
skills/pokemon-player/: SKILL.md
skills/polymarket/: SKILL.md
skills/powerpoint/: SKILL.md
skills/pytorch-fsdp/: SKILL.md
skills/pytorch-lightning/: SKILL.md
skills/qdrant/: SKILL.md
skills/qmd/: SKILL.md
skills/requesting-code-review/: SKILL.md
skills/saelens/: SKILL.md
skills/sag/: SKILL.md
skills/segment-anything/: SKILL.md
skills/session-logs/: SKILL.md
skills/sherpa-onnx-tts/: SKILL.md
skills/simpo/: SKILL.md
src/: i18n.rs  lib.rs  main.rs  multimodal.rs
src/tui/: mod.rs  (+3 more)
tool_descriptions/: en.toml  zh-CN.toml
web/: index.html
(+265 files in other folders)
